--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@types/redis": "^4.0.11",
 		"@types/remove-markdown": "^0.3.1",
 		"@types/uuid": "^9.0.1",
+		"@types/vivus": "^0.4.4",
 		"@typescript-eslint/eslint-plugin": "^5.59.6",
 		"@typescript-eslint/parser": "^5.59.6",
 		"@vitest/coverage-c8": "^0.31.1",
@@ -101,6 +102,7 @@
 		"socket.io-client": "^4.6.1",
 		"svelte-i18n": "^3.6.0",
 		"uuid": "^9.0.0",
+		"vivus": "^0.4.6",
 		"winston": "^3.8.2",
 		"winston-console-format": "^1.0.8",
 		"winston-daily-rotate-file": "^4.7.1"
