--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,13 +16,16 @@ concurrency:
 jobs:
   check:
     name: Check
-    runs-on: ubuntu-latest
-    # runs-on: ${{ matrix.runner }}
-    # strategy:
-    #   matrix:
-    #     runner: [ubuntu-latest, self-hosted]
+    # runs-on: ubuntu-latest
+    runs-on: ${{ matrix.runner }}
+    strategy:
+      matrix:
+        runner: [ubuntu-latest, self-hosted]
+
+    timeout-minutes: 10
+
     steps:
-      # - run: echo 'This job is running on ${{ matrix.runner }} runner!!'
+      - run: echo 'This job is running on ${{ matrix.runner }} runner!!'
 
       - uses: actions/checkout@v3
 
@@ -56,7 +59,11 @@ jobs:
 
   tests:
     name: Tests
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
+    runs-on: ${{ matrix.runner }}
+    strategy:
+      matrix:
+        runner: [ubuntu-latest, self-hosted]
 
     timeout-minutes: 10
 
@@ -85,6 +92,8 @@ jobs:
           --health-retries 5
 
     steps:
+      - run: echo 'This job is running on ${{ matrix.runner }} runner!!'
+
       - uses: actions/checkout@v3
 
       - id: 'auth'
