Exec self hosted runner #974

--- a/.github/workflows/ci-ubuntu-latest.yml
+++ b/.github/workflows/ci-ubuntu-latest.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI ubuntu-latest
 
 on:
   push:
@@ -16,16 +16,13 @@ concurrency:
 jobs:
   check:
     name: Check
-    # runs-on: ubuntu-latest
-    runs-on: ${{ matrix.runner }}
-    strategy:
-      matrix:
-        runner: [ubuntu-latest, self-hosted]
-
-    timeout-minutes: 10
-
+    runs-on: ubuntu-latest
+    # runs-on: ${{ matrix.runner }}
+    # strategy:
+    #   matrix:
+    #     runner: [ubuntu-latest, self-hosted]
     steps:
-      - run: echo 'This job is running on ${{ matrix.runner }} runner!!'
+      # - run: echo 'This job is running on ${{ matrix.runner }} runner!!'
 
       - uses: actions/checkout@v3
 
@@ -59,22 +56,18 @@ jobs:
 
   tests:
     name: Tests
-    # runs-on: ubuntu-latest
-    runs-on: ${{ matrix.runner }}
-    strategy:
-      matrix:
-        runner: [ubuntu-latest, self-hosted]
+    runs-on: ubuntu-latest
 
     timeout-minutes: 10
 
     env:
-      DATABASE_URL: mysql://root:rootroot@127.0.0.1:13306/talk
+      DATABASE_URL: mysql://root:rootroot@127.0.0.1:3306/talk
 
     services:
       mysql:
         image: mysql
         ports:
-          - 13306:3306
+          - 3306:3306
         env:
           MYSQL_DATABASE: talk
           MYSQL_ROOT_USER: root
@@ -84,7 +77,7 @@ jobs:
       redis:
         image: redis
         ports:
-          - 16379:6379
+          - 6379:6379
         options: >-
           --health-cmd "redis-cli ping"
           --health-interval 10s
@@ -92,8 +85,6 @@ jobs:
           --health-retries 5
 
     steps:
-      - run: echo 'This job is running on ${{ matrix.runner }} runner!!'
-
       - uses: actions/checkout@v3
 
       - id: 'auth'
@@ -109,7 +100,7 @@ jobs:
       - name: Create .env
         run: |
           touch .env
-          echo DATABASE_URL=${{ env.DATABASE_URL }} >> .env
+          echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> .env
           echo SOUND_DIR=${{ secrets.SOUND_DIR }} >> .env
           echo AVATAR_DIR=${{ secrets.AVATAR_DIR }} >> .env
           echo GOOGLE_PROJECT_ID=${{ secrets.GOOGLE_PROJECT_ID }} >> .env
@@ -118,7 +109,6 @@ jobs:
           echo DEEPL_AUTH_KEY=${{ secrets.DEEPL_AUTH_KEY }} >> .env
           echo GMAIL_USER=${{ secrets.GMAIL_USER }} >> .env
           echo GMAIL_PASS=${{ secrets.GMAIL_PASS }} >> .env
-          echo REDIS_PORT=16379 >> .env
 
       - name: Build
         shell: bash
