Create branch script #992

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"prepare": "husky install",
 		"typecheck": "tsc --noEmit",
 		"typecheck:why": "tsc --noEmit --explainFiles > explainTypes.txt",
-		"search-index": "tsx ./src/lib/docs/search_index.ts"
+		"search-index": "tsx ./src/lib/docs/search_index.ts",
+		"create-branch": "tsx ./src/lib/git/create_git_branch.ts"
 	},
 	"prisma": {
 		"seed": "tsx prisma/seed.ts"
