--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,7 @@
 		"protos",
 		"Roboto",
 		"Segoe",
+		"sinpro",
 		"sinproject",
 		"stylelint",
 		"stylelintrc",
@@ -59,6 +60,7 @@
 		"texttospeech",
 		"Todos",
 		"Trackpad",
+		"tulnp",
 		"typecheck",
 		"Upvote",
 		"Urlify",
