Revert "Merge pull request #1027 from sinProject-Inc/1026-re-test-the-hosted-runner"
This reverts commit a60ca4adefe6f67c8272bac49ffedc3c6c959d85, reversing
changes made to 709e45a90633aee16939a4a93f419c70b31fb998.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI ubuntu-latest
+name: CI
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
       - main
 
 concurrency:
-  group: ci-ubuntu-latest-${{ github.event.pull_request.number || github.ref }}
+  group: ci-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
