--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
 		"autocrlf",
 		"autoincrement",
 		"autoload",
+		"blazingly",
 		"codegen",
 		"cognitiveservices",
 		"combobox",
@@ -47,6 +48,7 @@
 		"pixabay",
 		"precompress",
 		"protos",
+		"reimagined",
 		"Roboto",
 		"Segoe",
 		"sinpro",
