Lighthouse: Serve static assets with an efficient cache policy  #1144

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -161,5 +161,6 @@
 		"no-inline-html": false,
 		"no-hard-tabs": false
 	},
-	"files.eol": "\n"
+	"files.eol": "\n",
+	"rest-client.previewResponseInUntitledDocument": true
 }
