Docs: Chrome Extensions #1177

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,10 +15,11 @@
 		"autocrlf",
 		"autoincrement",
 		"autoload",
-		"Caddyfile",
 		"blazingly",
+		"Caddyfile",
 		"codegen",
 		"cognitiveservices",
+		"Colorblindly",
 		"combobox",
 		"compinit",
 		"Consolas",
@@ -72,6 +73,7 @@
 		"uuidv",
 		"viewports",
 		"vivus",
+		"Wappalyzer",
 		"Wavenet"
 	],
 
