Docs: Async bad example #1187 Fix example

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,8 +15,8 @@
 		"autocrlf",
 		"autoincrement",
 		"autoload",
-		"Caddyfile",
 		"blazingly",
+		"Caddyfile",
 		"codegen",
 		"cognitiveservices",
 		"combobox",
@@ -31,6 +31,7 @@
 		"Halfwidth",
 		"Haxe",
 		"highlightjs",
+		"hostnames",
 		"imaps",
 		"iwasaki",
 		"japanwest",
