Create search-index on preBuild #1204

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"typecheck:why": "tsc --noEmit --explainFiles > explainTypes.txt",
 		"search-index": "tsx ./src/lib/docs/search_index.ts",
 		"create-branch": "tsx ./src/lib/git/create_git_branch.ts",
-		"postbuild": "npm run search-index"
+		"prebuild": "npm run search-index"
 	},
 	"prisma": {
 		"seed": "tsx prisma/seed.ts"
