--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
 		"dotenv": "^16.3.1",
 		"eslint": "^8.43.0",
 		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint-plugin-svelte": "^2.31.1",
 		"husky": "^8.0.3",
 		"imap-simple": "^5.1.0",
 		"lint-staged": "^13.2.2",
