Convert png files to avif files #1257

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
 		"autoload",
 		"blazingly",
 		"Caddyfile",
+		"cavif",
 		"codegen",
 		"cognitiveservices",
 		"Colorblindly",
@@ -36,6 +37,7 @@
 		"hostnames",
 		"imaps",
 		"iwasaki",
+		"iwasakishinya",
 		"japanwest",
 		"keystyle",
 		"Meiryo",
@@ -58,6 +60,7 @@
 		"Segoe",
 		"sinpro",
 		"sinproject",
+		"squoosh",
 		"stylelint",
 		"stylelintrc",
 		"tabler",
