--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,18 +4,21 @@
 	"icons": [
 		{
 			"src": "./icon-144.avif",
-			"type": "image/png",
-			"sizes": "144x144"
+			"type": "image/avif",
+			"sizes": "144x144",
+			"purpose": "any maskable"
 		},
 		{
 			"src": "./icon-192.avif",
-			"type": "image/png",
-			"sizes": "192x192"
+			"type": "image/avif",
+			"sizes": "192x192",
+			"purpose": "any maskable"
 		},
 		{
 			"src": "./icon-512.avif",
-			"type": "image/png",
-			"sizes": "512x512"
+			"type": "image/avif",
+			"sizes": "512x512",
+			"purpose": "any maskable"
 		}
 	],
 	"scope": "/",
