--- a/static/manifest.json
+++ b/static/manifest.json
@@ -5,17 +5,15 @@
 		{
 			"src": "./icon-144.avif",
 			"type": "image/png",
-			"sizes": "144x144",
-			"purpose": "any maskable"
+			"sizes": "144x144"
 		},
 		{
 			"src": "./icon-192.avif",
 			"type": "image/png",
-			"sizes": "192x192",
-			"purpose": "any maskable"
+			"sizes": "192x192"
 		},
 		{
-			"src": "./icon-512.avif",
+			"src": "./icon-512.png",
 			"type": "image/png",
 			"sizes": "512x512",
 			"purpose": "any maskable"
