Change npm run create-branch to npm run branch #1305

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"typecheck": "tsc --noEmit",
 		"typecheck:why": "tsc --noEmit --explainFiles > explainTypes.txt",
 		"search-index": "tsx ./src/lib/docs/search_index.ts",
-		"create-branch": "tsx ./src/lib/git/create_git_branch.ts",
+		"branch": "git checkout main && git pull && tsx ./src/lib/git/create_git_branch.ts",
 		"prebuild": "npm run search-index"
 	},
 	"prisma": {
