Docs: Company Information #1316

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
 		"autocrlf",
 		"autoincrement",
 		"autoload",
+		"autoplay",
 		"blazingly",
 		"Caddyfile",
 		"cavif",
@@ -27,6 +28,8 @@
 		"Consolas",
 		"datasource",
 		"deepl",
+		"DICOM",
+		"Elementor",
 		"esbenp",
 		"Flaticon",
 		"FPATH",
@@ -46,10 +49,12 @@
 		"msedge",
 		"networkidle",
 		"Neue",
+		"NIFCLOUD",
 		"noopener",
 		"noreferrer",
 		"Noto",
 		"nprogress",
+		"Nuxt",
 		"Pexels",
 		"Piseth",
 		"pixabay",
@@ -70,6 +75,7 @@
 		"testid",
 		"textbox",
 		"texttospeech",
+		"Thymeleaf",
 		"Todos",
 		"Trackpad",
 		"tulnp",
