Remove the Docs #1340

--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
 		"prepare": "husky install",
 		"typecheck": "tsc --noEmit",
 		"typecheck:why": "tsc --noEmit --explainFiles > explainTypes.txt",
-		"search-index": "tsx ./src/lib/docs/search_index.ts",
-		"branch": "git checkout main && git pull && tsx ./src/lib/git/create_git_branch.ts",
-		"prebuild": "npm run search-index"
+		"branch": "git checkout main && git pull && tsx ./src/lib/git/create_git_branch.ts"
 	},
 	"prisma": {
 		"seed": "tsx prisma/seed.ts"
@@ -33,16 +31,12 @@
 		"@sveltejs/kit": "^1.20.5",
 		"@types/express": "^4.17.17",
 		"@types/glob": "^8.1.0",
-		"@types/highlight.js": "^10.1.0",
 		"@types/imap-simple": "^4.2.6",
-		"@types/jsdom": "^21.1.1",
-		"@types/markdown-it-link-attributes": "^3.0.1",
 		"@types/morgan": "^1.9.4",
 		"@types/nodemailer": "^6.4.8",
 		"@types/nprogress": "^0.2.0",
 		"@types/prettier": "^2.7.3",
 		"@types/redis": "^4.0.11",
-		"@types/remove-markdown": "^0.3.1",
 		"@types/uuid": "^9.0.2",
 		"@types/vivus": "^0.4.4",
 		"@typescript-eslint/eslint-plugin": "^5.60.1",
@@ -61,7 +55,6 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"prettier-plugin-tailwindcss": "^0.3.0",
 		"prisma": "^4.16.1",
-		"remove-markdown": "^0.5.0",
 		"stylelint": "^15.10.1",
 		"stylelint-config-standard": "^33.0.0",
 		"stylelint-config-standard-scss": "^9.0.0",
@@ -83,18 +76,10 @@
 		"@google-cloud/translate": "^7.2.1",
 		"@prisma/client": "^4.16.1",
 		"@socket.io/redis-adapter": "^8.2.1",
-		"@types/markdown-it": "^12.2.3",
 		"country-flag-emoji-polyfill": "^0.1.4",
 		"deepl-node": "^1.10.2",
 		"express": "^4.18.2",
-		"fuse.js": "^6.6.2",
-		"glob": "^10.3.0",
 		"gray-matter": "^4.0.3",
-		"highlight.js": "^11.8.0",
-		"jsdom": "^22.1.0",
-		"markdown-it": "^13.0.1",
-		"markdown-it-highlightjs": "^4.0.1",
-		"markdown-it-link-attributes": "^4.0.1",
 		"microsoft-cognitiveservices-speech-sdk": "^1.29.0",
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.9.3",
