Add the tabsize rule #1343

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -177,5 +177,6 @@
 		"no-hard-tabs": false
 	},
 	"files.eol": "\n",
-	"rest-client.previewResponseInUntitledDocument": true
+	"rest-client.previewResponseInUntitledDocument": true,
+	"editor.tabSize": 2
 }
