--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ AVATAR_DIR="./.data/avatars"
 GMAIL_USER="username@gmail.com"
 GMAIL_PASS="google_app_password"
 
-GOOGLE_PROJECT_ID="XXX"
+VITE_GOOGLE_PROJECT_ID="XXX"
 GOOGLE_LOCATION='us-central1'
 MICROSOFT_SPEECH_KEY="XXX"
 DEEPL_AUTH_KEY="{deepl-auth-key}"
