Change to svelte env access #1367 Change the name of VITE_GOOGLE_PROJECT_ID back to GOOGLE_PROJECT_ID

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ AVATAR_DIR="./.data/avatars"
 GMAIL_USER="username@gmail.com"
 GMAIL_PASS="google_app_password"
 
+GOOGLE_PROJECT_ID="XXX"
 VITE_GOOGLE_PROJECT_ID="XXX"
 GOOGLE_LOCATION='us-central1'
 MICROSOFT_SPEECH_KEY="XXX"
