--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
 		"test:e2e:ci": "CI=true npm run test:e2e",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write .",
+		"lint": "eslint .",
+		"lint-prettier": "eslint . && prettier --check .",
+		"format": "eslint . --fix",
 		"prepare": "husky install",
 		"typecheck": "tsc --noEmit",
 		"typecheck:why": "tsc --noEmit --explainFiles > explainTypes.txt",
@@ -39,21 +40,22 @@
 		"@types/redis": "^4.0.11",
 		"@types/uuid": "^9.0.2",
 		"@types/vivus": "^0.4.4",
-		"@typescript-eslint/eslint-plugin": "^5.60.1",
-		"@typescript-eslint/parser": "^5.60.1",
+		"@typescript-eslint/eslint-plugin": "^6.5.0",
+		"@typescript-eslint/parser": "^6.5.0",
 		"@vitest/coverage-c8": "^0.32.2",
 		"autoprefixer": "^10.4.14",
 		"dotenv": "^16.3.1",
-		"eslint": "^8.43.0",
-		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-svelte": "^2.31.1",
+		"eslint": "^8.48.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-prettier": "^5.0.0",
+		"eslint-plugin-svelte": "^2.33.0",
 		"husky": "^8.0.3",
 		"imap-simple": "^5.1.0",
 		"lint-staged": "^13.2.2",
 		"postcss": "^8.4.24",
-		"prettier": "^2.8.8",
-		"prettier-plugin-svelte": "^2.10.1",
-		"prettier-plugin-tailwindcss": "^0.3.0",
+		"prettier": "^3.0.3",
+		"prettier-plugin-svelte": "^3.0.3",
+		"prettier-plugin-tailwindcss": "^0.5.3",
 		"prisma": "^4.16.1",
 		"stylelint": "^15.10.1",
 		"stylelint-config-standard": "^33.0.0",
