--- a/package.json
+++ b/package.json
@@ -27,74 +27,75 @@
 		"seed": "tsx prisma/seed.ts"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.35.1",
-		"@sveltejs/adapter-node": "^1.2.4",
-		"@sveltejs/kit": "^1.20.5",
+		"@playwright/test": "^1.38.0",
+		"@sveltejs/adapter-node": "^1.3.1",
+		"@sveltejs/kit": "^1.25.0",
 		"@types/express": "^4.17.17",
 		"@types/glob": "^8.1.0",
 		"@types/imap-simple": "^4.2.6",
-		"@types/morgan": "^1.9.4",
-		"@types/nodemailer": "^6.4.8",
+		"@types/morgan": "^1.9.5",
+		"@types/nodemailer": "^6.4.10",
 		"@types/nprogress": "^0.2.0",
 		"@types/prettier": "^2.7.3",
 		"@types/redis": "^4.0.11",
-		"@types/uuid": "^9.0.2",
+		"@types/uuid": "^9.0.3",
 		"@types/vivus": "^0.4.4",
-		"@typescript-eslint/eslint-plugin": "^6.5.0",
-		"@typescript-eslint/parser": "^6.5.0",
+		"@typescript-eslint/eslint-plugin": "^6.7.0",
+		"@typescript-eslint/parser": "^6.7.0",
 		"@vitest/coverage-c8": "^0.32.2",
-		"autoprefixer": "^10.4.14",
+		"autoprefixer": "^10.4.15",
 		"dotenv": "^16.3.1",
-		"eslint": "^8.48.0",
+		"eslint": "^8.49.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.0.0",
-		"eslint-plugin-svelte": "^2.33.0",
+		"eslint-plugin-svelte": "^2.33.1",
 		"husky": "^8.0.3",
 		"imap-simple": "^5.1.0",
-		"lint-staged": "^13.2.2",
-		"postcss": "^8.4.24",
+		"lint-staged": "^14.0.1",
+		"postcss": "^8.4.29",
 		"prettier": "^3.0.3",
 		"prettier-plugin-svelte": "^3.0.3",
-		"prettier-plugin-tailwindcss": "^0.5.3",
-		"prisma": "^4.16.1",
-		"stylelint": "^15.10.1",
-		"stylelint-config-standard": "^33.0.0",
-		"stylelint-config-standard-scss": "^9.0.0",
-		"svelte": "^4.0.0",
-		"svelte-check": "^3.4.4",
+		"prettier-plugin-tailwindcss": "^0.5.4",
+		"prisma": "^5.3.0",
+		"stylelint": "^15.10.3",
+		"stylelint-config-standard": "^34.0.0",
+		"stylelint-config-standard-scss": "^11.0.0",
+		"svelte": "^4.2.0",
+		"svelte-check": "^3.5.1",
 		"svelte-preprocess": "^5.0.4",
-		"tailwindcss": "^3.3.2",
+		"tailwindcss": "^3.3.3",
 		"tailwindcss-dir": "^4.0.0",
-		"tslib": "^2.6.0",
-		"tsx": "^3.12.7",
-		"typescript": "^5.1.3",
-		"user-agent-data-types": "^0.3.1",
-		"vite": "^4.3.9",
-		"vitest": "^0.32.2"
+		"tslib": "^2.6.2",
+		"tsx": "^3.12.10",
+		"typescript": "^5.2.2",
+		"user-agent-data-types": "^0.4.2",
+		"vite": "^4.4.9",
+		"vitest": "^0.34.4"
 	},
 	"type": "module",
 	"dependencies": {
-		"@google-cloud/text-to-speech": "^4.2.2",
-		"@google-cloud/translate": "^7.2.1",
-		"@prisma/client": "^4.16.1",
+		"@google-cloud/text-to-speech": "^5.0.1",
+		"@google-cloud/translate": "^8.0.2",
+		"@prisma/client": "^5.3.0",
 		"@socket.io/redis-adapter": "^8.2.1",
 		"country-flag-emoji-polyfill": "^0.1.4",
 		"deepl-node": "^1.10.2",
 		"express": "^4.18.2",
 		"gray-matter": "^4.0.3",
-		"microsoft-cognitiveservices-speech-sdk": "^1.29.0",
+		"intl-messageformat": "^10.5.2",
+		"microsoft-cognitiveservices-speech-sdk": "^1.32.0",
 		"morgan": "^1.10.0",
-		"nodemailer": "^6.9.3",
+		"nodemailer": "^6.9.5",
 		"nprogress": "^0.2.0",
-		"redis": "^4.6.7",
-		"socket.io": "^4.7.0",
-		"socket.io-client": "^4.7.0",
-		"svelte-i18n": "^3.6.0",
-		"svelte-local-storage-store": "^0.5.0",
-		"svelte-meta-tags": "^2.8.0",
-		"uuid": "^9.0.0",
+		"redis": "^4.6.8",
+		"socket.io": "^4.7.2",
+		"socket.io-client": "^4.7.2",
+		"svelte-i18n": "^3.7.4",
+		"svelte-local-storage-store": "^0.6.0",
+		"svelte-meta-tags": "^3.0.3",
+		"uuid": "^9.0.1",
 		"vivus": "^0.4.6",
-		"winston": "^3.9.0",
+		"winston": "^3.10.0",
 		"winston-console-format": "^1.0.8",
 		"winston-daily-rotate-file": "^4.7.1"
 	},
