--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"typescript": "^5.2.2",
 		"user-agent-data-types": "^0.4.2",
 		"vite": "^4.4.9",
+		"vite-plugin-pwa": "^0.16.6",
 		"vitest": "^0.34.4"
 	},
 	"type": "module",
