--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,24 +9,24 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		// "noImplicitAny": true,
-		// "strictNullChecks": true,
-		// "strictFunctionTypes": true,
-		// "strictBindCallApply": true,
-		// "strictPropertyInitialization": true,
-		// "noImplicitThis": true,
-		// "useUnknownInCatchVariables": true,
-		// "alwaysStrict": true,
 
+		// strictest: https://github.com/tsconfig/bases/blob/main/bases/strictest.json
+		// @tsconfig/strictestで追加されるcompilerOptionsを確認する https://blog.y-temp4.com/entry/tsconfig-strictest
+		"allowUnusedLabels": false,
 		"allowUnreachableCode": false,
 		"exactOptionalPropertyTypes": true,
+		"noFallthroughCasesInSwitch": true,
 		"noImplicitOverride": true,
 		"noImplicitReturns": true,
-		"noFallthroughCasesInSwitch": true,
-		// "noUncheckedIndexedAccess": true,
+		"noPropertyAccessFromIndexSignature": true,
+		"noUncheckedIndexedAccess": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
 
-		"types": ["vitest/importMeta"]
-	}
+		"isolatedModules": true,
+
+		"types": ["vite-plugin-pwa/info"]
+}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
