Set tsconfig to strictest #1445 fix errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,8 @@
 
 		"isolatedModules": true,
 
-		"types": ["vite-plugin-pwa/info"]
-}
+		"types": ["vite-plugin-pwa/info", "vitest/importMeta"]
+	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
