Set tsconfig to strictest #1445 Corrected PR review content

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
 
 		"isolatedModules": true,
 
-		"types": ["vite-plugin-pwa/info", "vitest/importMeta"]
+		"types": ["vitest/importMeta"]
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
