--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@typescript-eslint/eslint-plugin": "^6.7.0",
 		"@typescript-eslint/parser": "^6.7.0",
 		"@vitest/coverage-c8": "^0.32.2",
+		"@vitest/coverage-v8": "^0.34.6",
 		"autoprefixer": "^10.4.15",
 		"dotenv": "^16.3.1",
 		"eslint": "^8.49.0",
@@ -70,7 +71,7 @@
 		"typescript": "^5.2.2",
 		"user-agent-data-types": "^0.4.2",
 		"vite": "^4.4.9",
-		"vitest": "^0.34.4"
+		"vitest": "^0.34.6"
 	},
 	"type": "module",
 	"dependencies": {
