--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
 		"seed": "tsx prisma/seed.ts"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.38.0",
+		"@playwright/test": "^1.40.0",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.25.0",
 		"@types/express": "^4.17.17",
 		"@types/glob": "^8.1.0",
 		"@types/imap-simple": "^4.2.6",
 		"@types/morgan": "^1.9.5",
+		"@types/node": "^20.9.3",
 		"@types/nodemailer": "^6.4.10",
 		"@types/nprogress": "^0.2.0",
 		"@types/prettier": "^2.7.3",
