Change html format to Prettier #1471 Modify setting.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -149,7 +149,7 @@
 		"editor.defaultFormatter": "dbaeumer.vscode-eslint"
 	},
 	"[html]": {
-		"editor.defaultFormatter": "dbaeumer.vscode-eslint"
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
 	"[svelte]": {
 		"editor.defaultFormatter": "dbaeumer.vscode-eslint"
